# streamlit-based-portfolio

./: .envrc  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
portfolio/: __main__.py  buttons.py  home.py  image.py  schemas.py  sections.py  settings.py  style.py
portfolio/animation/: contact.json  experience.json  skills.json
portfolio/button_pages/: about.py
portfolio/html/: about.html  buttons_social.html  contact.html  divider.html  experience.html  footer.html  project_bighpc.html  project_portfolio.html  project_thesis.html  section_about.html  section_contact.html  section_curriculum.html  section_experience.html  section_project_portfolio.html  section_project_thesis.html  skills.html  structure_footer.html  structure_tech_stack.html  structure_title.html  stucture_style.html  style.html  subtitle.html  video_bighpc.html
portfolio/styles/: expander.css  main.css
portfolio/tabs/: about.py  contact.py  curriculum.py  experience.py  projects.py  skills.py
styles/: main.css
